2009-07-20  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Jan Urbanski

	* common/common.mk:
	Preserve PYTHONPATH and FLU_PROJECT_PATH set by ./env in
	check-local-registry.  Properly quote command to delay evaluation
	of PYTHONPATH and FLU_PROJECT_PATH to the context set by ./env.

2009-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/epydoc.mk:
	  Also add FLUMOTION_DIR to PYTHONPATH, so that depending projects
	  can build their docs.  Also show the doc generation line, to make
	  it easier to debug.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/misc/httpserver/localpath.py:
	Make sure the .mp4 get a video/mp4 mime type.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/misc/httpserver/httpfile.py:
	Make the default do_prepareBody implementation return an empty header
	string, as documented in the docstring. Returning None worked only by
	accident.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/misc/httpserver/httpfile.py:
	Ignore malformed start GET parameters when serving FLV or MP4
	files.
	* flumotion/test/test_component_httpserver.py:
	Unit test the new behaviour.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/misc/httpserver/httpfile.py:
	When splitting the MP4 file fails, serve the file from the
	beginning instead of returning a HTTP 500 error.
	* flumotion/test/test_component_httpserver.py:
	Unit test the new behaviour.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/misc/httpserver/httpfile.py:
	Always seek in the provider with MP4 files.
	Sometimes the splitting library can return an offset of 0 and
	the provider still needs to seek.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/test/test_component_httpserver.py: